--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "webpack-dev-server",
     "watch": "webpack --watch",
     "server": "cd dist && live-server",
-    "start": "npm run build && npm-run-all --parallel watch server"
+    "devserver": "npm run build && npm-run-all --parallel watch server"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "favicons": "^6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^5.5.0",
+    "json-loader": "^0.5.7",
     "live-server": "^1.1.0",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
